<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/browseFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_browse"/>
    <item
        android:id="@+id/addTextbookFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nav_add"/>
    <item
        android:id="@+id/myListingsFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_my_listings"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings"/>
</menu>